# godot-cpp-cmake

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate.py
cmake/: FindGodotCpp.cmake
